# folding

./: .gitignore  CHANGELOG.md  folding.cabal
benchmarks/: benchmarks.hs
src/Control/: Fold.hs
