name: folding
version: 0.0.0
-- synopsis:
-- description:
license: BSD3
license-file: LICENSE
author: Mitsutoshi Aoe
maintainer: maoe@foldr.in
-- copyright:
category: Control
build-type: Simple
extra-source-files: CHANGELOG.md
cabal-version: >= 1.10

library
  exposed-modules:
    Control.Fold
  -- other-modules:
  -- other-extensions:
  build-depends:
        base >= 4.9 && < 4.11
  hs-source-dirs: src
  default-language: Haskell2010

benchmark benchmarks
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is: benchmarks.hs
  build-depends:
      base
    , criterion
    , foldl
    , folding
  ghc-options: -O2 -Wall -rtsopts
  default-language: Haskell2010
